# AutoResearchClaw

./: .gitignore  AGENTS.md  AGENTS_ADD.md  Quick_Start.md  README.md  config.researchclaw.example.yaml  config2.arc.yaml  pyproject.toml
docs/: CHANGELOG_ANTHROPIC_ADAPTER.md
researchclaw/: cli.py  config.py  health.py  prompts.py  report.py
researchclaw/agents/figure_agent/: integrator.py  nano_banana.py
researchclaw/experiment/: colab_sandbox.py  factory.py  ssh_sandbox.py
researchclaw/hitl/: chat.py  smart_pause.py  summarizer.py
researchclaw/literature/: openalex_client.py
researchclaw/llm/: __init__.py  acp_client.py  anthropic_adapter.py  client.py  gemini_adapter.py
researchclaw/pipeline/: _helpers.py  contracts.py  executor.py  runner.py  stages.py
researchclaw/pipeline/stage_impls/: _final_editorial_repair.py  _paper_writing.py  _review_publish.py
researchclaw/skills/: schema.py
researchclaw/templates/: compiler.py  conference.py  converter.py
researchclaw/templates/styles/: reference.docx
tests/: test_anthropic.py  test_compiler.py  test_decision_agent.py  test_pipeline_helpers.py  test_rc_checkpoint.py  test_rc_citation_verify.py  test_rc_config.py  test_rc_contracts.py  test_rc_e2e_regression.py  test_rc_executor.py  test_rc_runner.py  test_rc_stages.py  test_rc_templates.py  test_skills_library.py  test_web_platform.py
